feat(langium): Integrate with Java

--- a/project-flow-syntax/package.json
+++ b/project-flow-syntax/package.json
@@ -16,6 +16,7 @@
         "langium:generate:production": "langium generate --mode=production",
         "langium:watch": "langium generate --watch",
         "vscode:prepublish": "npm run build && npm run lint",
+        "build:graaljs": "node esbuild.graaljs.mjs",
         "build:web": "npm run build",
         "bundle": "vite build",
         "bundle:serve": "http-server ./dist --port 5175",
